@@ -160,7 +160,6 @@ importFrom(beachmat,realizeFileBackedMatrix)
 importFrom(ggbeeswarm,geom_quasirandom)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
-importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,element_blank)
@@ -200,6 +199,7 @@ importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
+importFrom(ggrepel,geom_text_repel)
 importFrom(grid,grid.draw)
 importFrom(gridExtra,grid.arrange)
 importFrom(methods,as)
